<resources>
    <string name="app_name">OTPVerification</string>
    <string name="sign_in">Sign in</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">log in</string>
    <string name="or">or</string>
    <string name="sign_up">sign up</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new account</string>
    <string name="email_email_com">email@email.com</string>
    <string name="mobile_number">mobile number</string>
    <string name="please_enter_the_code">Please enter the code</string>
    <string name="_000000">000000</string>
    <string name="submit">Submit</string>
</resources>