<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_new_account"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/username"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:maxLines="1" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:hint="@string/email_email_com"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:maxLines="1" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:hint="@string/mobile_number"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:textSize="16sp"
        android:maxLines="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:background="@color/black"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/or"
        android:layout_gravity="center"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/log_in"
        android:background="@color/material_dynamic_neutral60"
        android:textColor="@color/white"
        />
</androidx.appcompat.widget.LinearLayoutCompat>